.k8s/microk8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <solution>
  labels:
    name: <solution>
