.k8s/microk8s/3X-service-(component).yaml
apiVersion: v1
kind: Service
metadata:
  name: <component>-service
  namespace: <solution>
  labels:
    app: <component>
spec:
  selector:
    app: <component>
  ports:
    - protocol: TCP
      port: <out app port>
      targetPort: <inner app port>
